--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <header>
-        <img src="images/tea_cozy_logo_black.PNG" alt="Tea Cozy logo in a serif font" />
+        <img src="./images/tea_cozy_logo_black.PNG" alt="Tea Cozy logo in a serif font" />
         <nav>
             <ul>
                 <li><a href="#offset_mission">Mission</a></li>
